chore: FontManager extension 추가 #20
- Pretendard-Bold.ttf 폰트 파일 추가
- Info.plist 다시 세팅

--- a/DOTCHI/DOTCHI/Info.plist
+++ b/DOTCHI/DOTCHI/Info.plist
@@ -4,10 +4,10 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Pretendard-ExtraBold.ttf</string>
-		<string>Pretendard-SemiBold.ttf</string>
 		<string>Pretendard-Medium.ttf</string>
-		<string>Pretendard-Black.ttf</string>
+		<string>Pretendard-SemiBold.ttf</string>
+		<string>Pretendard-Bold.ttf</string>
+		<string>Pretendard-ExtraBold.ttf</string>
 	</array>
 </dict>
 </plist>
