chore: .gitignore에 .xcconfig 추가 #48

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,4 @@ xcuserdata
 **/xcshareddata/WorkspaceSettings.xcsettings
 GAM/GAM.xcodeproj/project.xcworkspace/xcuserdata/jungbin.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
+*.xcconfig
