chore: Release config 설정 #10

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ xcuserdata
 GAM/GAM.xcodeproj/project.xcworkspace/xcuserdata/jungbin.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
 *.xcconfig
+DOTCHI/DOTCHI.xcodeproj/xcshareddata/xcschemes/DOTCHI-Release.xcscheme
