--- a/DOTCHI/DOTCHI/Info.plist
+++ b/DOTCHI/DOTCHI/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>${APP_NAME}</string>
 	<key>FacebookDisplayName</key>
 	<string>DOTCHI</string>
 	<key>FacebookClientToken</key>
